# fcm

./: README.md  fcm.cabal
samples/: butterfly.txt
src/: CsvTable.hs  Fcm.hs  Main.hs
src/Fcm/: Calculations.hs  Csv.hs  Distancies.hs  Fcm.hs  Initialization.hs  Types.hs
tests/: Tests.hs
