name:                fcm
version:             0.1.0.0
author:              Vladimir
category:            Math
description:         Fuzzy c-means
build-type:          Simple
cabal-version:       >=1.8

executable fcm
  ghc-options:         -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base ==4.6.*,
                       optparse-applicative ==0.12.*,
                       cassava ==0.4.*,
                       bytestring ==0.10.*,
                       vector ==0.10.*,
                       matrix ==0.3.*
  default-language:    Haskell2010
